ul and li text-align:left fix

--- a/src/pages/NewsDetails/styles.css
+++ b/src/pages/NewsDetails/styles.css
@@ -70,13 +70,14 @@
     justify-content: flex-start;
     width: 100vw;
     text-align: left;
-    margin-left: 10rem;
+    margin-left:10rem;
     border: 0;
 }
 #page-news-details .newsdetailmain .news-detail .description  li{
     text-align: left;
-    width: 100%;
+    width: 100vw;
     list-style-type: circle;
+    margin-left: 10rem;
 }
 
 #page-news-details .newsdetailmain .news-detail .description h2{
