--- a/src/pages/SportDetails/styles.css
+++ b/src/pages/SportDetails/styles.css
@@ -67,13 +67,18 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    display: none;
-
+    justify-content: flex-start;
+    width: 100vw;
+    text-align: left;
+    margin-left:10rem;
+    border: 0;
 }
+
 #page-sport-details .sportdetailmain .sport-detail .description  li{
-    text-align: justify;
-    width: 100%;
-    list-style-type: none;
+    text-align: left;
+    width: 100vw;
+    list-style-type: circle;
+    margin-left: 10rem;
 }
 
 #page-sport-details .sportdetailmain .sport-detail .description h2{
